squelette-pld-comp/ifcc-test-output/testfiles-8_affect_sans_decla/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: ‘b’ undeclared (first use in this function)
    3 |         b = 42;
      |         ^
input.c:3:9: note: each undeclared identifier is reported only once for each function it appears in

exit status: 1
